gap fix

--- a/src/components/phonePreview/phonePreview.module.css
+++ b/src/components/phonePreview/phonePreview.module.css
@@ -26,6 +26,7 @@
   height: 611px;
   border: 1px solid var(--grey);
   border-radius: 35px;
+  gap: 20px;
 }
 
 .profileHeader {
@@ -33,7 +34,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 8px;
   margin: 24px;
 }
 
